[tool.poetry]
name = "linear regression"
version = "0.1.0"
description = ""
authors = ["unknown <unknown.2.21.2021@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
opencv-python = "^4.5.5"
pytesseract = "^0.3.8"
pyscreenshot = "^3.0"
mss = "^6.1.0"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.10.2%2Bcu113-cp38-cp38-win_amd64.whl"}
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
